# camera-edge

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.arm64  Makefile  README.md  docker-compose.yml  gstreamer.c  gstreaming.py  resistenza-01.csv  resistenza-01.json  roi-arcipressi-03.csv  roi-arcipressi-03.json  tracker.py
data/: all_cameras_en.yaml
data/calib_cameras/: 20936.params  20939.params
data/pmat_new/: pmat_2404.txt
demo/: main.cpp  main2.cpp  test_undistort.cpp
docker/l4t-trt/: Dockerfile  runDocker.sh
include/: EdgeViewer.h  Profiler.h  camera_elaboration.h  configuration.h  data.h  video_capture.h
scripts/: gstreamer.c  run.sh  runDocker.sh  runEdge.sh
src/: camera_elaboration.cpp  camera_elaboration_UDP.cpp  camera_elaboration_ZMQ.cpp  configuration.cpp  data.cpp  message.cpp  video_capture.cpp
